--- a/Menu.html
+++ b/Menu.html
@@ -15,10 +15,10 @@
       <i class="fa fa-bars"></i>
     </a>
 
-    
+
   <ul id="mesLiens">
-    <li><a href="#">Acceuil</a></li>
-    <li><a href="#">Location</a></li>
+    <li><a href="Acceuil.html">Acceuil</a></li>
+    <li><a href="liste-kayak.html">Location</a></li>
     <li><a href="#">Membre</a></li>
     <li><a href="#">A propos</a></li>
     <li><a href="#">Messagerie</a></li>
