Ajout footer sur page liste kayak et Menu

--- a/Menu.html
+++ b/Menu.html
@@ -24,5 +24,23 @@
     <li><a href="#">Messagerie</a></li>
   </ul>
   <script src="scripts/menu.js"></script>
+
+  <footer role="contentinfo" class="footer">
+    <div class="">
+      <div class="">
+        <section class="">
+          <div class="">
+            <h3 class="">À propos</h3>
+          </div>
+          <ul class="">
+            <li class="">
+              <a href="" class="">Comment fonctionne LoCayak</a>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </div>
+  </footer>
+  
 </body>
 </html>
