--- a/liste-kayak.html
+++ b/liste-kayak.html
@@ -29,7 +29,24 @@
             <div class="proprietaire">Le propriétaire est: Le souverain</div>
             <a href="">Voir ce Kayak</a>
         </div>
-    </div>  
+    </div>
+
+    <footer role="contentinfo" class="footer">
+        <div class="">
+          <div class="">
+            <section class="">
+              <div class="">
+                <h3 class="">À propos</h3>
+              </div>
+              <ul class="">
+                <li class="">
+                  <a href="" class="">Comment fonctionne LoCayak</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+        </div>
+      </footer>
     
 </body>
 </html>
