--- a/liste-kayak.html
+++ b/liste-kayak.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
+    <section>
     <div class="header">
         <h1>LoCayak</h1>
         <ul>
@@ -16,6 +17,7 @@
             <li><a href="#">Messagerie</a></li>
           </ul>
       </div>
+      <article>
     <div class="liste-kayak">
         <div class="kayak">
                     
@@ -30,23 +32,7 @@
             <a href="">Voir ce Kayak</a>
         </div>
     </div>
-
-    <footer role="contentinfo" class="footer">
-        <div class="">
-          <div class="">
-            <section class="">
-              <div class="">
-                <h3 class="">À propos</h3>
-              </div>
-              <ul class="">
-                <li class="">
-                  <a href="" class="">Comment fonctionne LoCayak</a>
-                </li>
-              </ul>
-            </section>
-          </div>
-        </div>
-      </footer>
-    
+</article>
+</section>
 </body>
 </html>
