--- a/Acceuil.html
+++ b/Acceuil.html
@@ -16,10 +16,18 @@
             <li><a href="#">Messagerie</a></li>
           </ul>
       </div>
+
+      <section>
+        <div class="zone-bienvenue">
+          <p class="message-bienvenue">
+            Bonjour et bienvenue chez Locayak, le site où vous pouvez
+            louer un kayak, ou mettre votre kayak en location !
+            
+          </p>
+        </div>
+      </section>
      
       <footer role="contentinfo" class="footer">
-        <div class="">
-          <div class="">
             <section class="">
               <div class="">
                 <h3 class="">À propos</h3>
@@ -30,8 +38,6 @@
                 </li>
               </ul>
             </section>
-          </div>
-        </div>
       </footer>
 
  </body>
