--- a/Menu.html
+++ b/Menu.html
@@ -16,13 +16,13 @@
     </a>
 
 
-  <ul id="mesLiens">
-    <li><a href="Acceuil.html">Acceuil</a></li>
-    <li><a href="liste-kayak.html">Location</a></li>
-    <li><a href="#">Membre</a></li>
-    <li><a href="#">A propos</a></li>
-    <li><a href="#">Messagerie</a></li>
-  </ul>
+    <ul id = "mesLiens">
+      <li><a href="Acceuil.html">Acceuil</a></li>
+      <li><a href="liste-kayak.html">Location</a></li>
+      <li><a href="#">Membre</a></li>
+      <li><a href="Projet.html">A propos</a></li>
+      <li><a href="#">Messagerie</a></li>
+    </ul> 
   <script src="scripts/menu.js"></script>
   
 </body>
