--- a/Projet.html
+++ b/Projet.html
@@ -8,13 +8,13 @@
 <body>
     <div class="header">
         <h1>LoCayak</h1>   
-        <ul>
-            <li><a href="#">Acceuil</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Membre</a></li>
-            <li><a href="#">A propos</a></li>
-            <li><a href="#">Messagerie</a></li>
-          </ul>
+        <ul id = "mesLiens">
+          <li><a href="Acceuil.html">Acceuil</a></li>
+          <li><a href="liste-kayak.html">Location</a></li>
+          <li><a href="#">Membre</a></li>
+          <li><a href="Projet.html">A propos</a></li>
+          <li><a href="#">Messagerie</a></li>
+        </ul> 
       </div>
 
       <section>
